--- a/brnn/下注流程.html
+++ b/brnn/下注流程.html
@@ -50,306 +50,247 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u2" class="ax_default _更新记录">
-        <div id="u2_div" class=""></div>
-        <div id="u2_text" class="text ">
+      <div id="u31" class="ax_default _更新记录">
+        <div id="u31_div" class=""></div>
+        <div id="u31_text" class="text ">
           <p><span style="text-decoration:none;">下注流程</span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u3" class="ax_default">
+      <div id="u32" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u4" class="ax_default">
-          <img id="u4_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u4_text" class="text ">
-            <p><span style="text-decoration:none;">下注点</span></p>
+        <div id="u33" class="ax_default">
+          <img id="u33_img" class="img " src="images/入场流程/u6.png"/>
+          <div id="u33_text" class="text ">
+            <p><span style="text-decoration:none;">庄家</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u5" class="ax_default">
-          <img id="u5_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u5_text" class="text ">
-            <p><span style="text-decoration:none;">游戏共4个下注点(天、地、玄、黄),玩家可在一个或多个下注点同时下注。</span></p>
+        <div id="u34" class="ax_default">
+          <img id="u34_img" class="img " src="images/入场流程/u7.png"/>
+          <div id="u34_text" class="text ">
+            <p><span style="text-decoration:none;">系统房间固定系统坐庄，自定义房间固定房主坐庄</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u6" class="ax_default">
-          <img id="u6_img" class="img " src="images/下注流程/u6.png"/>
-          <div id="u6_text" class="text ">
-            <p><span style="text-decoration:none;">可下倍数</span></p>
+        <div id="u35" class="ax_default">
+          <img id="u35_img" class="img " src="images/下注流程/u35.png"/>
+          <div id="u35_text" class="text ">
+            <p><span style="text-decoration:none;">下注</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u7" class="ax_default">
-          <img id="u7_img" class="img " src="images/下注流程/u7.png"/>
-          <div id="u7_text" class="text ">
-            <p><span style="text-decoration:none;">闲家余额越多，可下注倍数越大，当下注游戏币超过身上携带游戏币的1/3时,将无法下注</span></p>
+        <div id="u36" class="ax_default">
+          <img id="u36_img" class="img " src="images/下注流程/u36.png"/>
+          <div id="u36_text" class="text ">
+            <p><span style="text-decoration:none;">玩家可在一个或多个下注点同时多次下注</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u8" class="ax_default">
-          <img id="u8_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u8_text" class="text " style="display:none; visibility: hidden">
+        <div id="u37" class="ax_default">
+          <img id="u37_img" class="img " src="images/入场流程/u6.png"/>
+          <div id="u37_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u9" class="ax_default">
-          <img id="u9_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u9_text" class="text " style="display:none; visibility: hidden">
+        <div id="u38" class="ax_default">
+          <img id="u38_img" class="img " src="images/入场流程/u7.png"/>
+          <div id="u38_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u10" class="ax_default">
-          <img id="u10_img" class="img " src="images/下注流程/u6.png"/>
-          <div id="u10_text" class="text " style="display:none; visibility: hidden">
+        <div id="u39" class="ax_default">
+          <img id="u39_img" class="img " src="images/下注流程/u39.png"/>
+          <div id="u39_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u11" class="ax_default">
-          <img id="u11_img" class="img " src="images/下注流程/u7.png"/>
-          <div id="u11_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u12" class="ax_default">
-          <img id="u12_img" class="img " src="images/下注流程/u12.png"/>
-          <div id="u12_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u13" class="ax_default">
-          <img id="u13_img" class="img " src="images/下注流程/u13.png"/>
-          <div id="u13_text" class="text " style="display:none; visibility: hidden">
+        <div id="u40" class="ax_default">
+          <img id="u40_img" class="img " src="images/下注流程/u40.png"/>
+          <div id="u40_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u14" class="ax_default _文本段落">
-        <div id="u14_div" class=""></div>
-        <div id="u14_text" class="text ">
-          <p><span style="text-decoration:none;">进入房间后，平台为庄家，所有闲家开始选择下注点及下注倍数进行下注</span></p>
+      <div id="u41" class="ax_default _文本段落">
+        <div id="u41_div" class=""></div>
+        <div id="u41_text" class="text ">
+          <p><span style="text-decoration:none;">所有闲家开始选择下注倍数</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u15" class="ax_default flow_shape">
-        <div id="u15_div" class=""></div>
-        <div id="u15_text" class="text ">
-          <p><span style="text-decoration:none;">开始下注</span></p>
+      <div id="u42" class="ax_default flow_shape">
+        <div id="u42_div" class=""></div>
+        <div id="u42_text" class="text ">
+          <p><span style="text-decoration:none;">开始</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u16" class="ax_default flow_shape">
-        <div id="u16_div" class=""></div>
-        <div id="u16_text" class="text ">
-          <p><span style="text-decoration:none;">选择注数</span></p>
+      <div id="u43" class="ax_default flow_shape">
+        <div id="u43_div" class=""></div>
+        <div id="u43_text" class="text ">
+          <p><span style="text-decoration:none;">闲家下注</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u17" class="ax_default flow_shape">
-        <div id="u17_div" class=""></div>
-        <div id="u17_text" class="text ">
-          <p><span style="text-decoration:none;">选择下注</span></p><p><span style="text-decoration:none;">点下注</span></p>
+      <div id="u44" class="ax_default flow_shape">
+        <div id="u44_div" class=""></div>
+        <div id="u44_text" class="text ">
+          <p><span style="text-decoration:none;">提示:已经连续3局未下注，连续5局将被请离</span></p>
         </div>
       </div>
 
       <!-- Unnamed (菱形) -->
-      <div id="u18" class="ax_default flow_shape">
-        <img id="u18_img" class="img " src="images/下注流程/u18.svg"/>
-        <div id="u18_text" class="text ">
-          <p><span style="text-decoration:none;">是否下过注</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (形状) -->
-      <div id="u19" class="ax_default flow_shape">
-        <img id="u19_img" class="img " src="images/下注流程/u19.svg"/>
-        <div id="u19_text" class="text ">
-          <p><span style="text-decoration:none;">可下注数规则</span></p>
+      <div id="u45" class="ax_default flow_shape">
+        <img id="u45_img" class="img " src="images/入场流程/u15.svg"/>
+        <div id="u45_text" class="text ">
+          <p><span style="text-decoration:none;">是否超时</span></p><p><span style="text-decoration:none;">未下注</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u20" class="ax_default _连接线">
-        <img id="u20_seg0" class="img " src="images/下注流程/u20_seg0.svg" alt="u20_seg0"/>
-        <img id="u20_seg1" class="img " src="images/下注流程/u20_seg1.svg" alt="u20_seg1"/>
-        <div id="u20_text" class="text " style="display:none; visibility: hidden">
+      <div id="u46" class="ax_default _连接线">
+        <img id="u46_seg0" class="img " src="images/下注流程/u46_seg0.svg" alt="u46_seg0"/>
+        <img id="u46_seg1" class="img " src="images/下注流程/u46_seg1.svg" alt="u46_seg1"/>
+        <div id="u46_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u21" class="ax_default _连接线">
-        <img id="u21_seg0" class="img " src="images/下注流程/u21_seg0.svg" alt="u21_seg0"/>
-        <img id="u21_seg1" class="img " src="images/下注流程/u21_seg1.svg" alt="u21_seg1"/>
-        <div id="u21_text" class="text " style="display:none; visibility: hidden">
+      <div id="u47" class="ax_default _连接线">
+        <img id="u47_seg0" class="img " src="images/下注流程/u47_seg0.svg" alt="u47_seg0"/>
+        <img id="u47_seg1" class="img " src="images/下注流程/u47_seg1.svg" alt="u47_seg1"/>
+        <div id="u47_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u22" class="ax_default _连接线">
-        <img id="u22_seg0" class="img " src="images/下注流程/u22_seg0.svg" alt="u22_seg0"/>
-        <img id="u22_seg1" class="img " src="images/下注流程/u22_seg1.svg" alt="u22_seg1"/>
-        <div id="u22_text" class="text ">
+      <div id="u48" class="ax_default _连接线">
+        <img id="u48_seg0" class="img " src="images/下注流程/u48_seg0.svg" alt="u48_seg0"/>
+        <img id="u48_seg1" class="img " src="images/下注流程/u48_seg1.svg" alt="u48_seg1"/>
+        <div id="u48_text" class="text ">
           <p><span style="text-decoration:none;">是</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u23" class="ax_default flow_shape">
-        <div id="u23_div" class=""></div>
-        <div id="u23_text" class="text ">
-          <p><span style="text-decoration:none;">扣减游戏币</span></p>
+      <div id="u49" class="ax_default flow_shape">
+        <div id="u49_div" class=""></div>
+        <div id="u49_text" class="text ">
+          <p><span style="text-decoration:none;">20秒后结束下注</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u50" class="ax_default flow_shape">
+        <div id="u50_div" class=""></div>
+        <div id="u50_text" class="text ">
+          <p><span style="text-decoration:none;">选择下注额</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u51" class="ax_default flow_shape">
+        <div id="u51_div" class=""></div>
+        <div id="u51_text" class="text ">
+          <p><span style="text-decoration:none;">选择下注点</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u24" class="ax_default _连接线">
-        <img id="u24_seg0" class="img " src="images/下注流程/u24_seg0.svg" alt="u24_seg0"/>
-        <img id="u24_seg1" class="img " src="images/下注流程/u24_seg1.svg" alt="u24_seg1"/>
-        <div id="u24_text" class="text ">
-          <p><span style="text-decoration:none;">否</span></p>
+      <div id="u52" class="ax_default _连接线">
+        <img id="u52_seg0" class="img " src="images/下注流程/u52_seg0.svg" alt="u52_seg0"/>
+        <img id="u52_seg1" class="img " src="images/下注流程/u52_seg1.svg" alt="u52_seg1"/>
+        <div id="u52_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u25" class="ax_default _连接线">
-        <img id="u25_seg0" class="img " src="images/下注流程/u25_seg0.svg" alt="u25_seg0"/>
-        <img id="u25_seg1" class="img " src="images/下注流程/u25_seg1.svg" alt="u25_seg1"/>
-        <div id="u25_text" class="text " style="display:none; visibility: hidden">
+      <div id="u53" class="ax_default _连接线">
+        <img id="u53_seg0" class="img " src="images/下注流程/u53_seg0.svg" alt="u53_seg0"/>
+        <img id="u53_seg1" class="img " src="images/下注流程/u53_seg1.svg" alt="u53_seg1"/>
+        <img id="u53_seg2" class="img " src="images/下注流程/u53_seg2.svg" alt="u53_seg2"/>
+        <div id="u53_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u26" class="ax_default flow_shape">
-        <div id="u26_div" class=""></div>
-        <div id="u26_text" class="text ">
-          <p><span style="text-decoration:none;">激活重复下注</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u27" class="ax_default flow_shape">
-        <div id="u27_div" class=""></div>
-        <div id="u27_text" class="text ">
-          <p><span style="text-decoration:none;">置灰重复下注</span></p>
+      <div id="u54" class="ax_default flow_shape">
+        <div id="u54_div" class=""></div>
+        <div id="u54_text" class="text ">
+          <p><span style="text-decoration:none;">进入发牌流程</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u28" class="ax_default _连接线">
-        <img id="u28_seg0" class="img " src="images/下注流程/u28_seg0.svg" alt="u28_seg0"/>
-        <img id="u28_seg1" class="img " src="images/下注流程/u28_seg1.svg" alt="u28_seg1"/>
-        <div id="u28_text" class="text " style="display:none; visibility: hidden">
+      <div id="u55" class="ax_default _连接线">
+        <img id="u55_seg0" class="img " src="images/下注流程/u55_seg0.svg" alt="u55_seg0"/>
+        <img id="u55_seg1" class="img " src="images/下注流程/u55_seg1.svg" alt="u55_seg1"/>
+        <div id="u55_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接) -->
+      <div id="u56" class="ax_default _连接线">
+        <img id="u56_seg0" class="img " src="images/下注流程/u56_seg0.svg" alt="u56_seg0"/>
+        <img id="u56_seg1" class="img " src="images/下注流程/u56_seg1.svg" alt="u56_seg1"/>
+        <div id="u56_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (菱形) -->
-      <div id="u29" class="ax_default flow_shape">
-        <img id="u29_img" class="img " src="images/下注流程/u18.svg"/>
-        <div id="u29_text" class="text ">
-          <p><span style="text-decoration:none;">游戏币是</span></p><p><span style="text-decoration:none;">否充足</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u30" class="ax_default flow_shape">
-        <div id="u30_div" class=""></div>
-        <div id="u30_text" class="text ">
-          <p><span style="text-decoration:none;">激活可下注数</span></p>
+      <div id="u57" class="ax_default flow_shape">
+        <img id="u57_img" class="img " src="images/入场流程/u15.svg"/>
+        <div id="u57_text" class="text ">
+          <p><span style="text-decoration:none;">下注游戏币是否超过余额3/1</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u31" class="ax_default _连接线">
-        <img id="u31_seg0" class="img " src="images/下注流程/u31_seg0.svg" alt="u31_seg0"/>
-        <img id="u31_seg1" class="img " src="images/下注流程/u31_seg1.svg" alt="u31_seg1"/>
-        <div id="u31_text" class="text ">
-          <p><span style="text-decoration:none;">是</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接) -->
-      <div id="u32" class="ax_default _连接线">
-        <img id="u32_seg0" class="img " src="images/下注流程/u32_seg0.svg" alt="u32_seg0"/>
-        <img id="u32_seg1" class="img " src="images/下注流程/u32_seg1.svg" alt="u32_seg1"/>
-        <div id="u32_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接) -->
-      <div id="u33" class="ax_default _连接线">
-        <img id="u33_seg0" class="img " src="images/下注流程/u33_seg0.svg" alt="u33_seg0"/>
-        <img id="u33_seg1" class="img " src="images/下注流程/u33_seg1.svg" alt="u33_seg1"/>
-        <div id="u33_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接) -->
-      <div id="u34" class="ax_default _连接线">
-        <img id="u34_seg0" class="img " src="images/下注流程/u34_seg0.svg" alt="u34_seg0"/>
-        <img id="u34_seg1" class="img " src="images/下注流程/u34_seg1.svg" alt="u34_seg1"/>
-        <div id="u34_text" class="text " style="display:none; visibility: hidden">
+      <div id="u58" class="ax_default _连接线">
+        <img id="u58_seg0" class="img " src="images/下注流程/u58_seg0.svg" alt="u58_seg0"/>
+        <img id="u58_seg1" class="img " src="images/下注流程/u58_seg1.svg" alt="u58_seg1"/>
+        <div id="u58_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u35" class="ax_default flow_shape">
-        <div id="u35_div" class=""></div>
-        <div id="u35_text" class="text ">
-          <p><span style="text-decoration:none;">不能下注</span></p>
+      <div id="u59" class="ax_default flow_shape">
+        <div id="u59_div" class=""></div>
+        <div id="u59_text" class="text ">
+          <p><span style="text-decoration:none;">无法下注</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u36" class="ax_default _连接线">
-        <img id="u36_seg0" class="img " src="images/下注流程/u36_seg0.svg" alt="u36_seg0"/>
-        <img id="u36_seg1" class="img " src="images/下注流程/u36_seg1.svg" alt="u36_seg1"/>
-        <div id="u36_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u37" class="ax_default flow_shape">
-        <div id="u37_div" class=""></div>
-        <div id="u37_text" class="text ">
-          <p><span style="text-decoration:none;">跟随上一次下注</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (连接) -->
-      <div id="u38" class="ax_default _连接线">
-        <img id="u38_seg0" class="img " src="images/下注流程/u38_seg0.svg" alt="u38_seg0"/>
-        <img id="u38_seg1" class="img " src="images/下注流程/u38_seg1.svg" alt="u38_seg1"/>
-        <img id="u38_seg2" class="img " src="images/下注流程/u38_seg2.svg" alt="u38_seg2"/>
-        <div id="u38_text" class="text " style="display:none; visibility: hidden">
+      <div id="u60" class="ax_default _连接线">
+        <img id="u60_seg0" class="img " src="images/下注流程/u60_seg0.svg" alt="u60_seg0"/>
+        <img id="u60_seg1" class="img " src="images/下注流程/u60_seg1.svg" alt="u60_seg1"/>
+        <div id="u60_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
