--- a/brnn/发牌流程.html
+++ b/brnn/发牌流程.html
@@ -50,240 +50,194 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u39" class="ax_default _更新记录">
-        <div id="u39_div" class=""></div>
-        <div id="u39_text" class="text ">
+      <div id="u61" class="ax_default _更新记录">
+        <div id="u61_div" class=""></div>
+        <div id="u61_text" class="text ">
           <p><span style="text-decoration:none;">发牌流程</span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u40" class="ax_default">
+      <div id="u62" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u41" class="ax_default">
-          <img id="u41_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u41_text" class="text ">
+        <div id="u63" class="ax_default">
+          <img id="u63_img" class="img " src="images/入场流程/u6.png"/>
+          <div id="u63_text" class="text ">
             <p><span style="text-decoration:none;">手牌</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u42" class="ax_default">
-          <img id="u42_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u42_text" class="text ">
-            <p><span style="text-decoration:none;">系统向4个下注点发放五张手牌</span></p>
+        <div id="u64" class="ax_default">
+          <img id="u64_img" class="img " src="images/入场流程/u7.png"/>
+          <div id="u64_text" class="text ">
+            <p><span style="text-decoration:none;">系统向四个下注点各发五张手牌</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u43" class="ax_default">
-          <img id="u43_img" class="img " src="images/下注流程/u6.png"/>
-          <div id="u43_text" class="text " style="display:none; visibility: hidden">
+        <div id="u65" class="ax_default">
+          <img id="u65_img" class="img " src="images/下注流程/u35.png"/>
+          <div id="u65_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u44" class="ax_default">
-          <img id="u44_img" class="img " src="images/下注流程/u7.png"/>
-          <div id="u44_text" class="text " style="display:none; visibility: hidden">
+        <div id="u66" class="ax_default">
+          <img id="u66_img" class="img " src="images/下注流程/u36.png"/>
+          <div id="u66_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u45" class="ax_default">
-          <img id="u45_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u45_text" class="text " style="display:none; visibility: hidden">
+        <div id="u67" class="ax_default">
+          <img id="u67_img" class="img " src="images/入场流程/u6.png"/>
+          <div id="u67_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u46" class="ax_default">
-          <img id="u46_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u46_text" class="text " style="display:none; visibility: hidden">
+        <div id="u68" class="ax_default">
+          <img id="u68_img" class="img " src="images/入场流程/u7.png"/>
+          <div id="u68_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u47" class="ax_default">
-          <img id="u47_img" class="img " src="images/下注流程/u6.png"/>
-          <div id="u47_text" class="text " style="display:none; visibility: hidden">
+        <div id="u69" class="ax_default">
+          <img id="u69_img" class="img " src="images/下注流程/u35.png"/>
+          <div id="u69_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u48" class="ax_default">
-          <img id="u48_img" class="img " src="images/下注流程/u7.png"/>
-          <div id="u48_text" class="text " style="display:none; visibility: hidden">
+        <div id="u70" class="ax_default">
+          <img id="u70_img" class="img " src="images/下注流程/u36.png"/>
+          <div id="u70_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u49" class="ax_default">
-          <img id="u49_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u49_text" class="text " style="display:none; visibility: hidden">
+        <div id="u71" class="ax_default">
+          <img id="u71_img" class="img " src="images/发牌流程/u71.png"/>
+          <div id="u71_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u50" class="ax_default">
-          <img id="u50_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u50_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u51" class="ax_default">
-          <img id="u51_img" class="img " src="images/下注流程/u6.png"/>
-          <div id="u51_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u52" class="ax_default">
-          <img id="u52_img" class="img " src="images/下注流程/u7.png"/>
-          <div id="u52_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u53" class="ax_default">
-          <img id="u53_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u53_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u54" class="ax_default">
-          <img id="u54_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u54_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u55" class="ax_default">
-          <img id="u55_img" class="img " src="images/下注流程/u6.png"/>
-          <div id="u55_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u56" class="ax_default">
-          <img id="u56_img" class="img " src="images/下注流程/u7.png"/>
-          <div id="u56_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u57" class="ax_default">
-          <img id="u57_img" class="img " src="images/下注流程/u4.png"/>
-          <div id="u57_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u58" class="ax_default">
-          <img id="u58_img" class="img " src="images/下注流程/u5.png"/>
-          <div id="u58_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u59" class="ax_default">
-          <img id="u59_img" class="img " src="images/发牌流程/u59.png"/>
-          <div id="u59_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u60" class="ax_default">
-          <img id="u60_img" class="img " src="images/发牌流程/u60.png"/>
-          <div id="u60_text" class="text " style="display:none; visibility: hidden">
+        <div id="u72" class="ax_default">
+          <img id="u72_img" class="img " src="images/发牌流程/u72.png"/>
+          <div id="u72_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u61" class="ax_default _文本段落">
-        <div id="u61_div" class=""></div>
-        <div id="u61_text" class="text ">
-          <p><span style="text-decoration:none;">下注结束，系统开始发牌</span></p>
+      <div id="u73" class="ax_default _文本段落">
+        <div id="u73_div" class=""></div>
+        <div id="u73_text" class="text ">
+          <p><span style="text-decoration:none;">下注完成，系统开始发牌</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u62" class="ax_default flow_shape">
-        <div id="u62_div" class=""></div>
-        <div id="u62_text" class="text ">
-          <p><span style="text-decoration:none;">停止下注</span></p>
+      <div id="u74" class="ax_default flow_shape">
+        <div id="u74_div" class=""></div>
+        <div id="u74_text" class="text ">
+          <p><span style="text-decoration:none;">开始</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u63" class="ax_default flow_shape">
-        <div id="u63_div" class=""></div>
-        <div id="u63_text" class="text ">
-          <p><span style="text-decoration:none;">发牌中</span></p>
+      <div id="u75" class="ax_default flow_shape">
+        <div id="u75_div" class=""></div>
+        <div id="u75_text" class="text ">
+          <p><span style="text-decoration:none;">系统发牌</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u64" class="ax_default flow_shape">
-        <div id="u64_div" class=""></div>
-        <div id="u64_text" class="text ">
-          <p><span style="text-decoration:none;">系统向4个下注点轮流发牌</span></p>
+      <div id="u76" class="ax_default flow_shape">
+        <div id="u76_div" class=""></div>
+        <div id="u76_text" class="text ">
+          <p><span style="text-decoration:none;">5秒后发牌结束</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u65" class="ax_default _连接线">
-        <img id="u65_seg0" class="img " src="images/发牌流程/u65_seg0.svg" alt="u65_seg0"/>
-        <img id="u65_seg1" class="img " src="images/发牌流程/u65_seg1.svg" alt="u65_seg1"/>
-        <div id="u65_text" class="text " style="display:none; visibility: hidden">
+      <div id="u77" class="ax_default _连接线">
+        <img id="u77_seg0" class="img " src="images/发牌流程/u77_seg0.svg" alt="u77_seg0"/>
+        <img id="u77_seg1" class="img " src="images/发牌流程/u77_seg1.svg" alt="u77_seg1"/>
+        <div id="u77_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u66" class="ax_default _连接线">
-        <img id="u66_seg0" class="img " src="images/发牌流程/u66_seg0.svg" alt="u66_seg0"/>
-        <img id="u66_seg1" class="img " src="images/发牌流程/u66_seg1.svg" alt="u66_seg1"/>
-        <div id="u66_text" class="text " style="display:none; visibility: hidden">
+      <div id="u78" class="ax_default _连接线">
+        <img id="u78_seg0" class="img " src="images/发牌流程/u78_seg0.svg" alt="u78_seg0"/>
+        <img id="u78_seg1" class="img " src="images/发牌流程/u78_seg1.svg" alt="u78_seg1"/>
+        <div id="u78_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u67" class="ax_default flow_shape">
-        <div id="u67_div" class=""></div>
-        <div id="u67_text" class="text ">
+      <div id="u79" class="ax_default flow_shape">
+        <div id="u79_div" class=""></div>
+        <div id="u79_text" class="text ">
+          <p><span style="text-decoration:none;">5秒内开牌</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接) -->
+      <div id="u80" class="ax_default _连接线">
+        <img id="u80_seg0" class="img " src="images/发牌流程/u80_seg0.svg" alt="u80_seg0"/>
+        <img id="u80_seg1" class="img " src="images/发牌流程/u80_seg1.svg" alt="u80_seg1"/>
+        <div id="u80_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u81" class="ax_default flow_shape">
+        <div id="u81_div" class=""></div>
+        <div id="u81_text" class="text ">
+          <p><span style="text-decoration:none;">依次展示庄家和下注点的牌型</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (连接) -->
+      <div id="u82" class="ax_default _连接线">
+        <img id="u82_seg0" class="img " src="images/发牌流程/u82_seg0.svg" alt="u82_seg0"/>
+        <img id="u82_seg1" class="img " src="images/发牌流程/u82_seg1.svg" alt="u82_seg1"/>
+        <div id="u82_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u83" class="ax_default flow_shape">
+        <div id="u83_div" class=""></div>
+        <div id="u83_text" class="text ">
           <p><span style="text-decoration:none;">进入比牌流程</span></p>
         </div>
       </div>
 
       <!-- Unnamed (连接) -->
-      <div id="u68" class="ax_default _连接线">
-        <img id="u68_seg0" class="img " src="images/发牌流程/u68_seg0.svg" alt="u68_seg0"/>
-        <img id="u68_seg1" class="img " src="images/发牌流程/u68_seg1.svg" alt="u68_seg1"/>
-        <div id="u68_text" class="text " style="display:none; visibility: hidden">
+      <div id="u84" class="ax_default _连接线">
+        <img id="u84_seg0" class="img " src="images/发牌流程/u84_seg0.svg" alt="u84_seg0"/>
+        <img id="u84_seg1" class="img " src="images/发牌流程/u84_seg1.svg" alt="u84_seg1"/>
+        <div id="u84_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
